force-app/main/default/objects/Help_Desk_Profile_Map__mdt/Help_Desk_Profile_Map__mdt.object-meta.xml
<CustomObject>
    <description>This contains a map that connects the Profile Id of the logged in user to the default functional group for creating a case.</description>
    <label>Help Desk Profile Map</label>
    <pluralLabel>Help Desk Profile Maps</pluralLabel>
</CustomObject>