force-app/main/default/objects/Help_Desk_Profile_Map__mdt/fields/Functional_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Functional_Group_Id__c</fullName>
    <description>Id associated with the functional group</description>
    <label>Functional Group Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>