force-app/main/default/objects/Help_Desk_Profile_Map__mdt/fields/Functional_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Functional_Group_Name__c</fullName>
    <description>Text name for the functional group (Optional)</description>
    <label>Functional Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>