force-app/main/default/objects/Help_Desk_Profile_Map__mdt/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <description>Id for the associated profile</description>
    <label>Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>